discussion/kv_engine/185685/185685_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Connect vbucket stats to GetOldestHistorySeqno

Link historyStartSeqno to cbstats vbucket-details

Change-Id: I346fb483b6ab8923e6d075ea5c5ce511a98c0e42

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-27 11:13:09.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-27 11:13:37.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334635/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-27 11:37:19.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/951/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1832:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1836:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1840:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2899:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/951/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1832:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/951/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1139/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(794): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1139/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/921/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/921/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1257/ : FAILURE

Compile error at [2023-01-27T11:24:12.021Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1257/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/964/ : FAILURE

Compile error at [2023-01-27T11:16:45.048Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/964/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/971/ : FAILURE

Compile error at [2023-01-27T11:35:40.712Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/971/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/961/ : FAILURE

Compile error at [2023-01-27T11:36:50.067Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/961/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/944/ : FAILURE

Compile error at [2023-01-27T11:35:23.335Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/944/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/966/ : FAILURE

Compile error at [2023-01-27T11:19:36.999Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/966/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22401/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/973/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
